ci(workflows): Remove unused dpkg-scanpackages dependency
- Remove dpkg-scanpackages from apt-get install command in build-and-update-repo.yml
- Simplify dependency list by eliminating unused package scanning tool
- Streamline CI/CD workflow dependencies for faster installation and reduced bloat

--- a/.github/workflows/build-and-update-repo.yml
+++ b/.github/workflows/build-and-update-repo.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y jq dpkg-dev curl apt-utils ruby ruby-dev build-essential rpm dpkg-scanpackages createrepo-c
+          sudo apt-get install -y jq dpkg-dev curl apt-utils ruby ruby-dev build-essential rpm createrepo-c
           sudo gem install fpm
 
       - name: Build packages
