ci(workflows): Add automated sync and build pipeline with release management
- Add sync-and-build.yml workflow for scheduled upstream synchronization every 6 hours
- Create sync-upstream.sh script to fetch and track upstream releases from imputnet/helium-linux
- Add check-upstream.sh script to validate upstream repository status
- Create full-sync-and-build.sh orchestration script for complete pipeline execution
- Add publish-release.sh script to publish packages to APT and RPM repositories
- Add setup.sh script for environment initialization and dependency installation
- Create build-and-publish.sh convenience script combining build and publish steps
- Add debug.sh script for troubleshooting and diagnostics
- Update build.sh and build-prerelease.sh with multilingual desktop entry support (Lithuanian, Russian)
- Enhance .gitignore with build artifacts, temporary files, and IDE configurations
- Update README.md with release management documentation and quick command reference
- Update validate-repos.sh with improved validation logic
- Implement automated git tagging and changelog generation for upstream releases
- Enable workflow dispatch and push-triggered builds for manual control and CI integration

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,33 @@ dist/
 apt-repo/
 gh-pages/
 .serena
+
+# Build and sync artifacts
+sync/
+*.tar.gz
+*.tar.xz
+*.tar.bz2
+*.tar.zst
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Backups
+.backups/
+
+# Local environment
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.iml
+
+# OS
+Thumbs.db
+.directory
