ci(workflows): Optimize dependencies and install FPM via gem
- Remove fpm from apt-get package list for cleaner dependency management
- Add build-essential to apt-get dependencies for compilation support
- Install FPM directly from gem repository using sudo gem install
- Add --no-document flag to gem install for faster installation
- Improve workflow efficiency by separating system and gem dependencies
- Streamline CI/CD pipeline by using native package managers appropriately

--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -30,11 +30,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             dpkg-dev \
-            fpm \
             ruby-dev \
             createrepo-c \
             curl \
-            jq
+            jq \
+            build-essential
+          
+          # Install FPM from gem
+          sudo gem install fpm --no-document
 
       - name: Configure git
         run: |
